--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,7 @@ repos:
       hooks:
           - id: markdownlint-cli2
             args: [--fix]
+            exclude: ^doc/.*
 
     - repo: https://github.com/koalaman/shellcheck-precommit
       rev: v0.9.0
